Bug 511413 - Cannot add weather widget from widget explorer by clicking on it
Summary: Cannot add weather widget from widget explorer by clicking on it
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Weather widget (other bugs)
Version First Reported In: 6.5.1
Platform: CachyOS Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-10-31 09:28 UTC by Anders Holmquist
Modified: 2025-11-08 09:07 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anders Holmquist 2025-10-31 09:28:27 UTC
SUMMARY
After upgrading to 6.5, the Weather Report widget fails to add to the desktop when selected.

STEPS TO REPRODUCE
1. Open edit mode for desktop.
2. Add graphical component.
3. Attempt to add the Weather Report widget.

OBSERVED RESULT
Nothing happens.

EXPECTED RESULT
The widget should add to the desktop.

SOFTWARE/OS VERSIONS
Operating System: CachyOS Linux
KDE Plasma Version: 6.5.1
KDE Frameworks Version: 6.19.0
Qt Version: 6.10.0
Kernel Version: 6.17.5-2-cachyos (64-bit)
Graphics Platform: Wayland

Localization: Swedish / Sweden

ADDITIONAL INFORMATION
Sys log spits out the following:

2025-10-31 09:28    plasmashell    Failed to find plasmoid path for "org.kde.plasma.weather"
2025-10-31 09:28    plasmashell    --------> load applet: "org.kde.plasma.weather" relpath: "plasma/plasmoids/org.kde.plasma.weather"
2025-10-31 09:28    plasmashell    .. pathes: QList()

Which seems to indicate the built-in widget is still trying to look at the old path instead of the new (compiled) library in /usr/lib/qt6/plugins/plasma/applets

This does not seem to occur for every CachyOS user, but I have not done anything in particular to my KDE installation more than pacman -Syu to keep it updated.
Comment 1 Nicolas Fella 2025-10-31 13:05:57 UTC
It seems to work when dragging the applet onto the desktop, but not when just clicking on it
Comment 2 Bug Janitor Service 2025-10-31 13:19:20 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5952
Comment 3 Anders Holmquist 2025-10-31 17:20:18 UTC
(In reply to Nicolas Fella from comment #1)
> It seems to work when dragging the applet onto the desktop, but not when
> just clicking on it

Wow, you're correct. That hadn't occurred to me to try. Thanks for the work-around if nothing else! :)
Comment 4 Nicolas Fella 2025-11-02 14:30:16 UTC
Git commit e5da9bfef1048a4acb93c135382490dcb1b756be by Nicolas Fella.
Committed on 02/11/2025 at 14:29.
Pushed by nicolasfella into branch 'master'.

Fix WidgetExplorer::addApplet

Looking up the package directory won't work for applets that use plasma_add_applet

It's also entirely unnecessary since we can and should just pass the applet id to createApplet

M  +1    -12   components/shellprivate/widgetexplorer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/e5da9bfef1048a4acb93c135382490dcb1b756be
Comment 5 Nicolas Fella 2025-11-02 14:31:44 UTC
Git commit b3bd31b9f8e7d3b06dc64e010eff34fc5286da07 by Nicolas Fella.
Committed on 02/11/2025 at 14:31.
Pushed by nicolasfella into branch 'Plasma/6.5'.

Fix WidgetExplorer::addApplet

Looking up the package directory won't work for applets that use plasma_add_applet

It's also entirely unnecessary since we can and should just pass the applet id to createApplet
(cherry picked from commit e5da9bfef1048a4acb93c135382490dcb1b756be)

M  +1    -12   components/shellprivate/widgetexplorer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/b3bd31b9f8e7d3b06dc64e010eff34fc5286da07
Comment 6 Anders Holmquist 2025-11-08 09:07:52 UTC
Can confirm fixed for my repro in 6.5.2