Fix WidgetExplorer::addApplet

Looking up the package directory won't work for applets that use plasma_add_applet

It's also entirely unnecessary since we can and should just pass the applet id to createApplet

BUG: 511413
(cherry picked from commit e5da9bfef1048a4acb93c135382490dcb1b756be)